# product-feedback-intelligence-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  check.py  docker-compose.yml  pyproject.toml  railway.json
chroma/: Dockerfile  railway.json
data/demo/: mobile_app_reviews.csv
docs/: governance.md  llm-runtime.md  product-proposal.md  review-guide.md  system-design.md  testing-playbook.md
docs/deploy/: railway.md
docs/diagrams/: README.md  c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: README.md  agent-orchestrator.md  analysis-pipeline.md  ingestion-preprocessing.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  railway.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: pfia-dashboard.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/lib/: api.ts  types.ts
src/pfia/: __init__.py  analysis.py  api.py  config.py  db.py  embeddings.py  errors.py  evals.py  llm_agents.py  metrics.py  models.py  observability.py  openai_client.py  orchestrator.py  preprocessing.py  privacy.py  qna.py  reporting.py  repository.py  retrieval.py  sentiment.py  services.py  tracing.py  utils.py  worker.py
src/pfia/static/: app.js  index.html  styles.css
tests/: conftest.py  test_analysis.py  test_app_flow.py  test_evals.py  test_llm_agents.py  test_pfia.py  test_preprocessing.py  test_privacy.py  test_providers.py  test_retrieval.py  test_sentiment.py
