[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfia"
version = "0.1.0"
description = "Product Feedback Intelligence Agent PoC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.135.3",
  "uvicorn[standard]>=0.44.0",
  "pydantic-settings>=2.13.1",
  "python-multipart>=0.0.26",
  "numpy>=2.2.6",
  "scikit-learn>=1.7.2",
  "chromadb>=1.5.7",
  "langgraph>=1.1.6",
  "httpx>=0.28.1",
  "prometheus-client>=0.25.0",
  "spacy>=3.8.7",
  "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]
local-embeddings = ["sentence-transformers>=5.1.1"]

[project.scripts]
pfia-api = "pfia.api:main"
pfia-worker = "pfia.worker:main"
pfia-evals = "pfia.evals:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pfia = ["static/*"]
